--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,41 @@
-div {
-    border:1px solid rgba(0,0,0,0.1);
-    background: #9C9C9C;
-    text-align:center;
+body {
+    background-color: #000000;
+    color: #555;
+    font-family: Arial, Helvetica, sans-serif;
 }
-.container-fluid, .container, .row{
-    background: #525252;
+
+#centeredBox {
+    background-color: #DF013A;
+    text-align: center;
+}
+
+h1 {
+    color: #ff0066;
+    background-color: #FFFFFF;
+    padding: 70px;
+    text-transform: uppercase;
+    font-family: "Arial Black", Helvetica, sans-serif;
+    margin: 0 auto 50px auto;
+    width: 550px;
+}
+
+h2 {
+    color: #000000;
+    text-align: left;
+}
+
+p {
+    text-align: left;
+}
+}
+h3 {
+    font-family: "Impact", Charcoal, sans-serif;
+    font-size: 250%;
+    text-align: 0 auto 50px auto;
+}
+a {
+    font-family: "Courier New", Courier, monospace;
+    text-decoration: none;
+    color: #8904B1;
+    font-weight: bold;
 }
